Open STDIN and php://stdin streams with the relevant wrapper when the file descriptor is a socket (inetd, etc) Fixes bug #43731